<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/input"
        android:autofillHints="nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nickname_hint"
        android:inputType="textPersonName"
        android:singleLine="true"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        style="?android:attr/progressBarStyleSmall" />

</LinearLayout>
